--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "ui:add": "npx shadcn-ui@latest add"
   },
   "dependencies": {
+    "next-intl": "^3.24.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
