--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,9 +2,7 @@
   "name": "@saas-platform/database",
   "version": "0.1.0",
   "private": true,
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./index.ts",
   "scripts": {
     "build": "pnpm run prisma:merge && tsup",
     "clean": "rm -rf .turbo node_modules dist",
