--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:push": "turbo run db:push"
   },
   "devDependencies": {
+    "husky": "^9.0.4",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
