--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,14 +8,18 @@
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf .next .turbo node_modules",
-    "ui:add": "npx shadcn-ui@latest add"
+    "ui:add": "npx shadcn@latest add add"
   },
   "dependencies": {
-    "next-intl": "^3.24.0",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@saas-platform/database": "workspace:*",
     "ahooks": "^3.8.1",
@@ -27,10 +31,12 @@
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "next-intl": "^3.24.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.3.0",
     "shadcn-ui": "^0.9.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
