--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@saas-platform/database": "workspace:*",
+    "@saas-platform/api": "workspace:*",
     "ahooks": "^3.8.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
